[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/CloseUpPlant/Stalks/Stalks.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("StalkSkeleton/SkelDown:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StalkSkeleton/SkelDown:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Wind"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("StalkSkeleton/SkelDown:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2, 3.75 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StalkSkeleton/SkelDown:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.2, 3.75 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -0.782973, 0.204563 ]
}

[node name="Stalks" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/Wind = SubResource( 2 )

[node name="Polygons" type="Node2D" parent="."]

[node name="StalkDown" type="Polygon2D" parent="Polygons"]
scale = Vector2( 0.15625, 1 )
color = Color( 0.435294, 0.337255, 0.337255, 1 )
offset = Vector2( -32, -64 )
texture = ExtResource( 1 )
skeleton = NodePath("../../StalkSkeleton")
polygon = PoolVector2Array( 0, 0, 0, 64, 64, 64, 64, 0 )
uv = PoolVector2Array( 0, 0, 0, 64, 64, 64, 64, 0 )
bones = [ "SkelDown", PoolRealArray( 1, 1, 1, 1 ), "SkelDown/SkelMid", PoolRealArray( 0, 0, 0, 0 ), "SkelDown/SkelMid/SkelUp", PoolRealArray( 0, 0, 0, 0 ), "SkelDown/SkelMid/SkelUp/SkelTop", PoolRealArray( 0, 0, 0, 0 ) ]

[node name="StalkMid" type="Polygon2D" parent="Polygons"]
position = Vector2( 0, -64 )
scale = Vector2( 0.15625, 1 )
color = Color( 0.435294, 0.337255, 0.337255, 1 )
offset = Vector2( -32, -64 )
texture = ExtResource( 1 )
skeleton = NodePath("../../StalkSkeleton")
polygon = PoolVector2Array( 0, 0, 0, 64, 64, 64, 64, 0 )
uv = PoolVector2Array( 0, 0, 0, 64, 64, 64, 64, 0 )
bones = [ "SkelDown", PoolRealArray( 0, 0, 0, 0 ), "SkelDown/SkelMid", PoolRealArray( 1, 1, 1, 1 ), "SkelDown/SkelMid/SkelUp", PoolRealArray( 0, 0, 0, 0 ), "SkelDown/SkelMid/SkelUp/SkelTop", PoolRealArray( 0, 0, 0, 0 ) ]

[node name="StalkUp" type="Polygon2D" parent="Polygons"]
position = Vector2( 0, -128 )
scale = Vector2( 0.15625, 1 )
color = Color( 0.435294, 0.337255, 0.337255, 1 )
offset = Vector2( -32, -64 )
texture = ExtResource( 1 )
skeleton = NodePath("../../StalkSkeleton")
polygon = PoolVector2Array( 0, 0, 0, 64, 64, 64, 64, 0 )
uv = PoolVector2Array( 0, 0, 0, 64, 64, 64, 64, 0 )
bones = [ "SkelDown", PoolRealArray( 0, 0, 0, 0 ), "SkelDown/SkelMid", PoolRealArray( 0, 0, 0, 0 ), "SkelDown/SkelMid/SkelUp", PoolRealArray( 1, 1, 1, 1 ), "SkelDown/SkelMid/SkelUp/SkelTop", PoolRealArray( 0, 0, 0, 0 ) ]

[node name="StalkSkeleton" type="Skeleton2D" parent="."]

[node name="SkelDown" type="Bone2D" parent="StalkSkeleton"]
rest = Transform2D( 1, 0, 0, 1, 0, 0 )
__meta__ = {
"_edit_bone_": true,
"_edit_ik_": true
}

[node name="SkelMid" type="Bone2D" parent="StalkSkeleton/SkelDown"]
position = Vector2( 0, -64 )
rotation = -0.261799
rest = Transform2D( 0.965926, -0.258819, 0.258819, 0.965926, 0, -64 )
__meta__ = {
"_edit_bone_": true
}

[node name="SkelUp" type="Bone2D" parent="StalkSkeleton/SkelDown/SkelMid"]
position = Vector2( 16.5644, -61.8193 )
rotation = -1.30899
rest = Transform2D( 0.258821, -0.965925, 0.965925, 0.258821, 16.5644, -61.8193 )
__meta__ = {
"_edit_bone_": true
}

[node name="SkelTop" type="Bone2D" parent="StalkSkeleton/SkelDown/SkelMid/SkelUp"]
position = Vector2( 64.0018, 8.01086e-05 )
rotation = -0.00560546
rest = Transform2D( 0.999984, -0.00560543, 0.00560543, 0.999984, 64.0018, 8.01086e-05 )
__meta__ = {
"_edit_bone_": true
}
